--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -46,6 +46,33 @@
   form button:hover {
     transform: scale(1.05);
   }
+
+  div {
+    color: var(--white);
+    padding-bottom: 16px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    gap: 16px;
+  }
+
+  div button {
+    height: 40px;
+    font-size: 16px;
+    background-color: var(--red-900);
+    border-radius: 8px;
+    border: 0;
+    color: var(--white);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+  }
+
+  div button:hover {
+    transform: scale(1.05);
+  }
 }
 
 .input {
@@ -71,5 +98,36 @@
 @media (max-width: 620px) {
   .login {
     width: 90%;
+  }
+}
+
+.buttonText {
+  display: inline;
+}
+
+.spinner {
+  display: none;
+  border: 4px solid transparent;
+  border-top: 4px solid #fff;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  animation: spin 1s linear infinite;
+}
+
+.loading .buttonText {
+  display: none;
+}
+
+.loading .spinner {
+  display: inline-block;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
